<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".apppermissionActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set permission of accessibility to auto send whatsapp messages, Just click on below button and turn on accessibility menu shortcut."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> Accessibility menu -> Allow switch"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/acc_whatsapp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_one"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set permission of auto start and background work, Just click on below button and turn on switch of ConnectIt application."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> Autostart -> ConnectIt -> Allow Switch"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/autostartbackwork"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_two"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set permission of draw over other apps, Just click on below button, click on ConnectIt application and turn on switch to allow display over other apps."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> Display over other apps -> ConnectIt -> Allow"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/otherapps"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_three"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set permission of notification listener for auto pilot, Just click on below button, click on ConnectIt application and turn on switch to allow notification access."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> Notification Access -> ConnectIt -> Allow notification access"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notifyautopilot"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_four"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set application permissions, Just click on below button, click on App permission, click on every icon and then click on allow button to set permissions."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> App permission -> Call logs -> Allow, Contacts -> Allow, Phone -> Allow, SMS -> Allow"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_per_window"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_five"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set battery permissions, Just click on below button, click on Turn on now button."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> Batter permission -> Turn on now"
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/battery_permission"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_six"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="\u2022 To set other permissions, Just click on below button, click on CoonectIt App, click on other permissions, set other permission as you required."
                android:textSize="17sp"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below button -> ConnectIt App -> Other permissions -> Allow permanent notification, etc."
                android:layout_marginHorizontal="20dp"
                android:justificationMode="inter_word"
                android:textSize="16sp"/>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/other_per"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="15dp"
                android:backgroundTint="@color/green"
                app:strokeColor="@color/blue"
                app:strokeWidth="2dp"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cardview_seven"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:textColor="@color/white"/>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/connectit_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/connectit_logo2" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CONNECT"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/blue"
                    android:gravity="center_horizontal"
                    android:clickable="true"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="it"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:gravity="center_horizontal"
                    android:clickable="true"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>